k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: goweblocal
spec:
  selector:
    app: goweblocal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
