k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goweblocal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: goweblocal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goweblocal
            port:
              number: 80
